--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Versta</string>
     <string name="settings">Settings</string>
     <string name="back">Back</string>
+    <string name="swap_languages">Swap languages</string>
 </resources>
