--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="get_file">Get a new file</string>
     <string name="choose_file">Choose an existing file</string>
     <string name="unknown_error">Unknown error</string>
+    <string name="delete_language_title">Delete %1$s?</string>
 </resources>
