Moving all text to string resources

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,8 +27,73 @@
     <string name="language_analysis_failed_explanation">An error occurred. There appears to be an issue with the selected file. Please try uploading a different file.</string>
     <string name="language_analysis_failed_title">Whoops!</string>
     <string name="language_analysis_approve">Import languages</string>
+    <string name="language_settings_title">Languages</string>
+    <string name="language_settings_get_more_title">Get more languages</string>
+    <string name="language_settings_get_more_description">Download or import new language</string>
     <string name="get_file">Get a new file</string>
     <string name="choose_file">Choose an existing file</string>
     <string name="unknown_error">Unknown error</string>
     <string name="delete_language_title">Delete %1$s?</string>
+    <string name="delete_language_description">Are you sure you want to remove %1$s? This will delete the following translation options:</string>
+    <string name="no_languages_available">No languages available</string>
+    <string name="language_import_hint">You can import a new language through the settings</string>
+    <string name="select_source_language">Select source language</string>
+    <string name="select_target_language">Select target language</string>
+    <string name="select_language">Select language</string>
+    <string name="select_language_from">From</string>
+    <string name="select_language_to">To</string>
+    <string name="translation_error_title">Translation error</string>
+    <string name="translation_error_description">Something went wrong during translation. Please file a bug report.</string>
+    <string name="dismiss">Dismiss</string>
+    <string name="confirm">Confirm</string>
+    <string name="cancel">Cancel</string>
+    <string name="text_translation_placeholder">Type something</string>
+    <string name="trial_license_title">Trial license</string>
+    <string name="trial_license_description">You are currently on a trial license, support the project by upgrading.</string>
+    <string name="trial_license_badge">Trial License</string>
+    <string name="paid_license_badge">Paid License</string>
+    <string name="about_language_models_title">Language models</string>
+    <string name="about_language_models_description">Attributions for language models</string>
+    <string name="about_third_party_title">Third-party</string>
+    <string name="about_third_party_description">Acknowledgements and third-party licenses</string>
+    <string name="about_privacy_policy_title">Privacy policy</string>
+    <string name="about_privacy_policy_description">Our commitment to your privacy</string>
+    <string name="icon_description">%1$s Icon</string>
+    <string name="neurora_attribution">By Neurora</string>
+    <string name="version_number">Version %1$s</string>
+    <string name="home_vision_title">Vision</string>
+    <string name="home_vision_description">Use your camera to translate</string>
+    <string name="home_voice_title">Voice</string>
+    <string name="home_voice_description">Translate a conversation</string>
+    <string name="language_models_title">Language models</string>
+    <string name="third_party_title">Third-party Libraries</string>
+    <string name="privacy_policy_title">Privacy Policy</string>
+    <string name="settings_title">Settings</string>
+    <string name="settings_languages_title">Languages</string>
+    <string name="settings_languages_description">Import languages, download languages</string>
+    <string name="settings_translation_title">Translation</string>
+    <string name="settings_translation_description">Manage history, translator fine-tuning</string>
+    <string name="settings_vision_title">Vision</string>
+    <string name="settings_vision_description">Configure camera, object tracking</string>
+    <string name="settings_voice_title">Voice</string>
+    <string name="settings_voice_description">Microphone settings, transcription</string>
+    <string name="settings_about_title">About</string>
+    <string name="settings_about_description">Version, privacy policy, attributions</string>
+    <string name="translation_settings_title">Translation</string>
+    <string name="translation_settings_history_headline">History</string>
+    <string name="translation_settings_history_toggle_title">Remember translations</string>
+    <string name="translation_settings_history_toggle_description">Save for later reference, and avoid re-translating the same text.</string>
+    <string name="translation_settings_history_size_title">History size</string>
+    <string name="translation_settings_history_size_description">How many translations to keep, only the newest will be saved.</string>
+    <string name="translation_settings_inference_headline">Translation</string>
+    <string name="translation_settings_inference_beam_size_title">Beam size</string>
+    <string name="translation_settings_inference_beam_size_description">The number of translations to consider during decoding. Higher values may improve translation quality, but will be slower.</string>
+    <string name="translation_settings_inference_max_length_title">Max sequence length</string>
+    <string name="translation_settings_inference_max_length_description">The maximum length of the input sequence. Longer text may be truncated.</string>
+    <string name="translation_settings_inference_min_p_title">Minimum probability</string>
+    <string name="translation_settings_inference_min_p_description">The minimum probability for a token to be considered during decoding. Lower values may improve translation quality, but may introduce more errors.</string>
+    <string name="translation_settings_inference_repetition_penalty_title">Word repetition penalty</string>
+    <string name="translation_settings_inference_repetition_penalty_description">The penalty for repeating tokens in the translation. Higher values may reduce repeated words, but may introduce more context loss.</string>
+    <string name="translation_settings_inference_thread_limit_title">Thread count</string>
+    <string name="translation_settings_inference_thread_limit_description">Limit the number of threads used for translation. Higher values may improve performance, but may impact other processes like voice input.</string>
 </resources>
